<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="contact_us">Contact us</string>
    <string name="companyInfo">Main office location: Udacity 2465 Latham St Mountain View, CA 94043 650-555-5555</string>
    <string name="webAddress">www.udacity.com</string>
    <string name="desc">myimg</string>
    <string name="motto">Never wasting a second of time</string>
</resources>
