<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:src="@drawable/udacity2"
        android:contentDescription="@string/desc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="20dp"/>
    <TextView
        android:text="@string/contact_us"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="0dp"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:layout_weight="1"
        android:background="#a70ac1e9"
        android:layout_margin="8dp"
        />
    <TextView
        android:text="@string/companyInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_weight="5"
        android:background="#83c96e40"
        android:padding="20dp"
        />

    <TextView
        android:text="@string/webAddress"
        android:autoLink="web"
        android:textColorLink="@android:color/black"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:background="#a705b8df"
        android:layout_marginTop="10dp"
        android:layout_weight="2"
        android:padding="5dp"
        />
    <TextView
        android:text="@string/motto"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="10sp"
        android:textColorHighlight="@color/colorPrimaryDark"
        android:textStyle="italic|bold"
        android:background="#0905b8df"
        android:layout_weight="0.7"
        android:padding="0.5dp"
        android:alpha=".65"
        tools:ignore="SmallSp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".65"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        android:src="@drawable/udacity1" />

</LinearLayout>

</ScrollView>

